@@ -2,6 +2,10 @@ ver 0.22.2 (not yet released)
 * database
   - simple: purge songs and virtual directories for unavailable plugins
     on update
+* input
+  - qobuz/tidal: fix protocol errors due to newlines in error messages
+* playlist
+  - soundcloud: fix protocol errors due to newlines in error messages
 * state_file: save on shutdown
 
 ver 0.22.1 (2020/10/17)
